# CppCAPI

./: CMakeLists.txt  LICENSE  README.md
cmake/: Config.cmake.in
demo/: CMakeLists.txt
demo/app/: main.cpp
demo/host/: client.cpp  client.hpp  errors.cpp  handle_map.hpp  handle_wrapper.hpp  handles.cpp  handles.hpp  main.cpp  owner.cpp  owner.hpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp  service.cpp
demo/include/feltplugindemo/: handles.h  interface.h
demo/include/feltpluginsystemdemo/: interface.h
demo/plugin/: client.cpp  client.hpp  handle_map.hpp  handle_wrapper.hpp  handles.cpp  handles.hpp  owner.cpp  owner.hpp  plugin.cpp  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp  service.cpp  service.hpp
src/: CMakeLists.txt
src/include/cppcapi/: error_map.hpp  interface.h  loader.hpp  plugin_definition.hpp  pointers.hpp
src/include/cppcapi/client/: handle_map.hpp  suite_adaptor.hpp
src/include/cppcapi/service/: handle_manager.hpp  handle_map.hpp  suite_decorator.hpp
src/include/feltplugin/: errors.hpp  handle_map.hpp  handles.h  interface.h  pointers.hpp
src/include/feltplugin/client/: handle_adaptor.hpp  handle_map.hpp
src/include/feltplugin/host/: handle_factory.hpp  plugin_factory.hpp
src/include/feltplugin/owner/: handle_factory.hpp  handle_map.hpp  plugin_factory.hpp
src/include/feltplugin/plugin/: handle_adaptor.hpp
src/include/feltplugin/receiver/: handle_adaptor.hpp  handle_map.hpp
src/include/feltplugin/service/: handle_factory.hpp  handle_map.hpp  plugin_factory.hpp
src/include/feltpluginsystem/: error_map.hpp  handle_wrapper.hpp  interface.h  loader.hpp  plugin.hpp  plugin_definition.hpp  plugin_factory.hpp  pointers.hpp
src/include/feltpluginsystem/client/: handle_adaptor.hpp  handle_map.hpp  suite_adaptor.hpp
src/include/feltpluginsystem/service/: handle_factory.hpp  handle_manager.hpp  handle_map.hpp  suite_decorator.hpp
tests/: CMakeLists.txt
tests/demos/: CMakeLists.txt
tests/demos/hello_plugin/: CMakeLists.txt
tests/demos/hello_plugin/app/: main.cpp
tests/demos/hello_plugin/include/cppcapi-demo-hello_plugin/: interface.h
tests/demos/hello_plugin/include/feltpluginsystem-demo-hello_plugin/: interface.h
tests/demos/hello_plugin/plugin/: plugin.cpp
tests/demos/string_map/: CMakeLists.txt
tests/demos/string_map/app/: main.cpp  main.py
tests/demos/string_map/host/: client.cpp  client.hpp  handle_wrapper.hpp  plugin_definition.hpp  service.cpp  service.hpp
tests/demos/string_map/include/cppcapi-demo-string_map/: interface.h
tests/demos/string_map/include/feltpluginsystem-demo-string_map/: interface.h
tests/demos/string_map/plugin/: client.cpp  client.hpp  handle_wrapper.hpp  plugin_definition.hpp  service.cpp  service.hpp
tests/unit/: CMakeLists.txt
tests/unit/cppcapi/service/: test_suite_decorator.cpp
tests/unit/felpluginsystem/service/: test_suite_decorator.cpp
